syntax = "proto3";

package halo.evmstaking.module;

import "cosmos/app/v1alpha1/module.proto";

option go_package = "halo/evmstaking/module";

// Module is the config object for the module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/omni-network/omni/halo/evmstaking"
  };

  // authority defines the custom module authority. If not set, defaults to the governance module.
  string authority = 1;

  // deliver_interval defines the delay between processing of valset-related events.
  int64 deliver_interval = 2;
}
